--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Music Visions</title>
+  <meta charset='utf-8'>
   <link rel='stylesheet' type='text/css' href='styles/main.css' />
   <link rel='stylesheet' type='text/css' href='styles/colors.css' />
 </head>
