clean up file structure for curious visitors

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Music Visions</title>
   <meta charset='utf-8'>
+  <link rel='shortcut icon' href='styles/favicon.ico' type='image/x-icon' />
   <link rel='stylesheet' type='text/css' href='styles/main.css' />
   <link rel='stylesheet' type='text/css' href='styles/colors.css' />
 </head>
